--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      const serviceWorkerVersion = "1044917380";
+      var serviceWorkerVersion = "617167705";
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
@@ -80,7 +80,7 @@
         }
         scriptLoaded = true;
         var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js?v=202312050940";
+        scriptTag.src = "main.dart.js?v=202301051954";
         scriptTag.type = "application/javascript";
         document.body.append(scriptTag);
       }
