--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/uwifi_map_services-build/" />
+  <base href="/uwifi_map_services-build/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -63,6 +63,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="uwifi_map_services" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <title>uwifi_map_services</title>
     <link rel="manifest" href="manifest.json" />
@@ -72,7 +73,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = "2896960128";
+      var serviceWorkerVersion = "1771273542";
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
@@ -80,7 +81,7 @@
         }
         scriptLoaded = true;
         var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js?v=202312061439";
+        scriptTag.src = "main.dart.js?v=202312130847";
         scriptTag.type = "application/javascript";
         document.body.append(scriptTag);
       }
