--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = "3229976928";
+      const serviceWorkerVersion = "2438169792";
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
@@ -81,7 +81,7 @@
         }
         scriptLoaded = true;
         var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js?v=202312201100";
+        scriptTag.src = "main.dart.js?v=202401171135";
         scriptTag.type = "application/javascript";
         document.body.append(scriptTag);
       }
