--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/uwifi_map_services-build/" />
+    <base href="/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -73,7 +73,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      const serviceWorkerVersion = "2475174022";
+      const serviceWorkerVersion = "2824719072";
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
@@ -81,7 +81,7 @@
         }
         scriptLoaded = true;
         var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js?v=202402090945";
+        scriptTag.src = "main.dart.js?v=202306010026";
         scriptTag.type = "application/javascript";
         document.body.append(scriptTag);
       }
