--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/" />
+    <base href="/uwifi_map_services-build/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -81,7 +81,7 @@
         }
         scriptLoaded = true;
         var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js?v=202306010026";
+        scriptTag.src = "main.dart.js?v=202402091025";
         scriptTag.type = "application/javascript";
         document.body.append(scriptTag);
       }
