--- a/index.html
+++ b/index.html
@@ -4,41 +4,6 @@
     <!--AIzaSyBIa17Ry9rJKwAdDitgZVY2rOMb_MIPKtM-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHQNZupjOSinz67IuhCHWVXm66ZBCPjXA"></script>
 
-
-  <!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '912462159827028');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=912462159827028&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2H01625P7F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2H01625P7F');
-</script>
-<!-- End of Google tag (gtag.js) -->
-
-<!-- Hotjar Tracking Code for RTA Config -->
-<script>
-(function(h,o,t,j,a,r){ h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)}; h._hjSettings={hjid:3499583,hjsv:6}; a=o.getElementsByTagName('head')[0]; r=o.createElement('script');r.async=1; r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv; a.appendChild(r); })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-<!-- End of Hotjar Tracking Code for RTA Config -->
-
     <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -63,6 +28,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="uwifi_map_services" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <title>uwifi_map_services</title>
     <link rel="manifest" href="manifest.json" />
@@ -72,7 +38,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = "617167705";
+      const serviceWorkerVersion = "2926299022";
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
@@ -80,7 +46,7 @@
         }
         scriptLoaded = true;
         var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js?v=202405271728";
+        scriptTag.src = "main.dart.js?v=202405291627";
         scriptTag.type = "application/javascript";
         document.body.append(scriptTag);
       }
